[204620]  Need a method of contributing driver definition specific UIs to a connection profile wizard

--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.luw.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.luw.ui/plugin.properties
@@ -13,4 +13,4 @@ providerName=Eclipse.org
 
 profile.db2.luw.wizard.title = DB2 for Linux, UNIX, and Windows
 profile.db2.luw.wizard.description = Create a DB2 for Linux, UNIX, and Windows connection profile.
-profile.db2.luw.properties = DB2 for Linux, UNIX, and Windows Connection Properties
+profile.db2.luw.properties = Driver Properties
