[204620]  Need a method of contributing driver definition specific UIs to a connection profile wizard

--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.ui/plugin.properties
@@ -13,4 +13,4 @@ providerName=Eclipse.org
 
 profile.db2.iseries.wizard.title = DB2 for i5/OS
 profile.db2.iseries.wizard.description = Create a DB2 for i5/OS connection profile.
-profile.db2.iseries.properties = DB2 for i5/OS Connection Properties
+profile.db2.iseries.properties = Driver Properties
