--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.ui/plugin.properties
@@ -13,4 +13,4 @@ providerName=Eclipse.org
 
 profile.db2.zseries.wizard.title = DB2 for z/OS
 profile.db2.zseries.wizard.description = Create a DB2 for z/OS connection profile.
-profile.db2.zseries.properties = DB2 for z/OS Connection Properties
+profile.db2.zseries.properties = Driver Properties
