--- a/plugins/org.eclipse.datatools.enablement.ibm.informix.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ibm.informix.ui/plugin.xml
@@ -76,4 +76,67 @@
       </propertyEditor>
    </extension>
    
+      <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+      <driverUIContributor
+            class="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.InformixOtherDriverUIContributor"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.informix.10_0.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.10_0.InformixOtherDriverUIContributor">
+      </driverUIContributor>
+   </extension>
+   
+   <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+      <driverUIContributor
+            class="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.InformixOtherDriverUIContributor"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.informix.9_4.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.9_4.InformixOtherDriverUIContributor">
+      </driverUIContributor>
+   </extension>
+   
+   <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+      <driverUIContributor
+            class="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.InformixOtherDriverUIContributor"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.informix.9_3.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.9_3.InformixOtherDriverUIContributor">
+      </driverUIContributor>
+   </extension>
+   
+   <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+      <driverUIContributor
+            class="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.InformixOtherDriverUIContributor"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.informix.9_2.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.9_2.InformixOtherDriverUIContributor">
+      </driverUIContributor>
+   </extension>
+   
+   <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+      <driverUIContributor
+            class="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.InformixDriverUIContributor"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.informix.10_0.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.10_0.InformixDriverUIContributor">
+      </driverUIContributor>
+   </extension>
+   
+   <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+      <driverUIContributor
+            class="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.InformixDriverUIContributor"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.informix.9_4.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.9_4.InformixDriverUIContributor">
+      </driverUIContributor>
+   </extension>
+   
+   <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+      <driverUIContributor
+            class="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.InformixDriverUIContributor"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.informix.9_3.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.9_3.InformixDriverUIContributor">
+      </driverUIContributor>
+   </extension>
+   
+   <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+      <driverUIContributor
+            class="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.InformixDriverUIContributor"
+            driverTemplateID="org.eclipse.datatools.enablement.ibm.informix.9_2.driverTemplate"
+            id="org.eclipse.datatools.enablement.ibm.informix.internal.ui.drivers.9_2.InformixDriverUIContributor">
+      </driverUIContributor>
+   </extension>
  </plugin>  
