[204620]  Need a method of contributing driver definition specific UIs to a connection profile wizard

--- a/plugins/org.eclipse.datatools.enablement.oracle.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oracle.ui/plugin.properties
@@ -13,4 +13,4 @@ providerName=Eclipse.org
 
 profile.oracle.wizard.title = Oracle
 profile.oracle.wizard.description = Create an Oracle connection profile.
-profile.oracle.properties = Oracle Connection Properties
+profile.oracle.properties = Driver Properties
