[204620]  Need a method of contributing driver definition specific UIs to a connection profile wizard

--- a/plugins/org.eclipse.datatools.enablement.ibm.informix.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.informix.ui/plugin.properties
@@ -13,4 +13,4 @@ providerName=Eclipse.org
 
 profile.informix.wizard.title = Informix
 profile.informix.wizard.description = Create an Informix connection profile.
-profile.informix.properties = Informix Connection Properties
+profile.informix.properties = Driver Properties
