[204620]  Need a method of contributing driver definition specific UIs to a connection profile wizard

--- a/plugins/org.eclipse.datatools.enablement.msft.sqlserver.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.msft.sqlserver.ui/plugin.properties
@@ -13,4 +13,4 @@ providerName=Eclipse.org
 
 profile.sqlserver.wizard.title = SQL Server
 profile.sqlserver.wizard.description = Create a SQL Server connection profile.
-profile.sqlserver.properties = SQL Server Connection Properties
+profile.sqlserver.properties = Driver Properties
