[204620]  Need a method of contributing driver definition specific UIs to a connection profile wizard

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -158,10 +158,13 @@ OtherDriverUIContributor.databaseName.label = D&atabase:
 OtherDriverUIContributor.url.label = &URL:
 OtherDriverUIContributor.userName.label = U&ser name:
 OtherDriverUIContributor.password.label = &Password:
-OtherDriverUIContributor.persistpassword.label = Sa&ve password
+OtherDriverUIContributor.savePassword.label = Sa&ve password
 OtherDriverUIContributor.optionalProps.label = Additional properties:
 OtherDriverUIContributor.summaryData.database = Database
 OtherDriverUIContributor.summaryData.username = User name
+OtherDriverUIContributor.summaryData.savePassword = Save Password
+OtherDriverUIContributor.summaryData.true = true
+OtherDriverUIContributor.summaryData.false = false
 OtherDriverUIContributor.summaryData.url = URL
 
 OtherDriverUIContributor.errormessage.requiresdatabase = Enter a database name.
