[212311]  Need sample code that demonstrates creating a connection programmatically

--- a/examples/org.eclipse.datatools.connectivity.sample/plugin.xml
+++ b/examples/org.eclipse.datatools.connectivity.sample/plugin.xml
@@ -20,7 +20,14 @@
                class="org.eclipse.datatools.connectivity.sample.popup.actions.LaunchSample"
                menubarPath="org.eclipse.datatools.connectivity.sample.menu1/group1"
                enablesFor="*"
-               id="org.eclipse.datatools.connectivity.sample.newAction">
+               id="org.eclipse.datatools.connectivity.sample.LaunchSample">
+         </action>
+         <action
+               label="Create Connection"
+               class="org.eclipse.datatools.connectivity.sample.popup.actions.CreateConnection"
+               menubarPath="org.eclipse.datatools.connectivity.sample.menu1/group1"
+               enablesFor="*"
+               id="org.eclipse.datatools.connectivity.sample.CreateConnection">
          </action>
       </objectContribution>
    </extension>
