[204620]  Need a method of contributing driver definition specific UIs to a connection profile wizard

--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries/plugin.xml
@@ -79,7 +79,7 @@
                   generated="false"
                   id="org.eclipse.datatools.enablement.ibm.db2.zseries.filterOnTBCreator"
                   name="%filterOnTBCreator"
-                  value="true"
+                  value="false"
                   required="false"
                   visible="true"/>
             <property
@@ -145,7 +145,7 @@
                   generated="false"
                   id="org.eclipse.datatools.enablement.ibm.db2.zseries.filterOnTBCreator"
                   name="%filterOnTBCreator"
-                  value="true"
+                  value="false"
                   required="false"
                   visible="true"/>
             <property
