BZ 202587 Componentization Implement a dialog to be invoked by the sqleditor.

--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/plugin.properties
@@ -56,3 +56,6 @@ ContentTip_description =Content Tip
 
 # Preference page name
 SQLBuilder.PreferencePageName = SQL Query Builder
+
+# Editor name for the editor which implements sqleditor's SQLBuilder extension point
+SQLEditor.SQLBuilderName = SQL Query Builder
