--- a/plugins/org.eclipse.datatools.connectivity.apache.derby/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.apache.derby/plugin.xml
@@ -72,7 +72,8 @@
             icon="icons/jdbc_16.gif"
             pingFactory="org.eclipse.datatools.connectivity.apache.internal.derby.connection.DerbyJDBCConnectionFactory"
             id="org.eclipse.datatools.connectivity.db.derby.embedded.connectionProfile"
-            name="%DERBY_CONNECTION_PROFILE_NAME"/>
+            name="%DERBY_CONNECTION_PROFILE_NAME"
+            propertiesPersistenceHook="org.eclipse.datatools.connectivity.apache.internal.derby.connection.DerbyPropertiesPersistenceHook"/>
       <connectionFactory
             class="org.eclipse.datatools.connectivity.apache.internal.derby.connection.DerbyJDBCConnectionFactory"
             id="java.sql.Connection"
@@ -509,6 +510,186 @@
                   visible="true"/>
          </properties>
       </driverTemplate> 
+      
+      <driverTemplate
+            createDefault="false"
+            emptyJarListIsOK="false"
+            id="org.eclipse.datatools.connectivity.db.derby102.otherDriver"
+            jarList=""
+            name="%DERBY102_OTHER_DRIVER_TEMPLATE_NAME"
+            parentCategory="org.eclipse.datatools.connectivity.db.derby.10_2.driverCategory">
+         <properties>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.driverClass"
+                  name="%DRIVER_CLASS_PROPERTY_NAME"
+                  value=""
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.vendor"
+                  name="%VENDOR_PROPERTY_NAME"
+                  value="Derby"
+                  required="true"
+                  visible="false"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.version"
+                  name="%VERSION_PROPERTY_NAME"
+                  value="10.2"
+                  required="true"
+                  visible="false"/>   
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.databaseName"
+                  name="%DATABASE_NAME_PROPERTY_NAME"
+                  value=""
+                  required="true"
+                  visible="true"/>                             
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.URL"
+                  name="%CONNECTION_URL_PROPERTY_NAME"
+                  value=""
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.username"
+                  name="%USER_ID_PROPERTY_NAME"
+                  value=""
+                  required="false"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.password"
+                  name="%PASSWORD_PROPERTY_NAME"
+                  value=""
+                  required="false"
+                  visible="true"/>
+         </properties>
+      </driverTemplate>
+      
+      <driverTemplate
+            createDefault="false"
+            emptyJarListIsOK="false"
+            id="org.eclipse.datatools.connectivity.db.derby101.otherDriver"
+            jarList=""
+            name="%DERBY101_OTHER_DRIVER_TEMPLATE_NAME"
+            parentCategory="org.eclipse.datatools.connectivity.db.derby.10_1.driverCategory">
+         <properties>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.driverClass"
+                  name="%DRIVER_CLASS_PROPERTY_NAME"
+                  value=""
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.vendor"
+                  name="%VENDOR_PROPERTY_NAME"
+                  value="Derby"
+                  required="true"
+                  visible="false"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.version"
+                  name="%VERSION_PROPERTY_NAME"
+                  value="10.1"
+                  required="true"
+                  visible="false"/>   
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.databaseName"
+                  name="%DATABASE_NAME_PROPERTY_NAME"
+                  value=""
+                  required="true"
+                  visible="true"/>                             
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.URL"
+                  name="%CONNECTION_URL_PROPERTY_NAME"
+                  value=""
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.username"
+                  name="%USER_ID_PROPERTY_NAME"
+                  value=""
+                  required="false"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.password"
+                  name="%PASSWORD_PROPERTY_NAME"
+                  value=""
+                  required="false"
+                  visible="true"/>
+         </properties>
+      </driverTemplate>
+      
+      <driverTemplate
+            createDefault="false"
+            emptyJarListIsOK="false"
+            id="org.eclipse.datatools.connectivity.db.derby.otherDriver"
+            jarList=""
+            name="%DERBY_OTHER_DRIVER_TEMPLATE_NAME"
+            parentCategory="org.eclipse.datatools.connectivity.db.derby.10_0.driverCategory">
+         <properties>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.driverClass"
+                  name="%DRIVER_CLASS_PROPERTY_NAME"
+                  value=""
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.vendor"
+                  name="%VENDOR_PROPERTY_NAME"
+                  value="Derby"
+                  required="true"
+                  visible="false"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.version"
+                  name="%VERSION_PROPERTY_NAME"
+                  value="10.0"
+                  required="true"
+                  visible="false"/>   
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.databaseName"
+                  name="%DATABASE_NAME_PROPERTY_NAME"
+                  value=""
+                  required="true"
+                  visible="true"/>                             
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.URL"
+                  name="%CONNECTION_URL_PROPERTY_NAME"
+                  value=""
+                  required="true"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.username"
+                  name="%USER_ID_PROPERTY_NAME"
+                  value=""
+                  required="false"
+                  visible="true"/>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.password"
+                  name="%PASSWORD_PROPERTY_NAME"
+                  value=""
+                  required="false"
+                  visible="true"/>
+         </properties>
+      </driverTemplate>
    </extension>
 
 </plugin>
