--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -1,5 +1,5 @@
 ################################################################################
-## Copyright (c) 2005 Sybase, Inc.
+## Copyright (c) 2005, 2007 Sybase, Inc.
 ## All rights reserved. This program and the accompanying materials
 ## are made available under the terms of the Eclipse Public License v1.0
 ## which accompanies this distribution, and is available at
@@ -7,6 +7,7 @@
 ##
 ## Contributors:
 ##    Sybase, Inc. - initial API and implementation
+##    IBM Corporation - migrated to new wizard framework
 ################################################################################ 
 plugin.internal_error=Internal Error - org.eclipse.datatools.connectivity
 ConnectionProfileConstants.unknownVersion=unknown
@@ -66,3 +67,8 @@ ManagedConnection_save_not_connected_error = Must be connected to server to save
 ManagedConnection_offline_not_supported_error = {0} does not support working offline.
 
 drivers.error.finding.property.no.template = Problem attempting to retrieve {0} from driver template.
+
+JDBCConnection.technologyName = JDBC
+
+
+
