[204620]  Need a method of contributing driver definition specific UIs to a connection profile wizard

--- a/plugins/org.eclipse.datatools.enablement.msft.sqlserver/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.msft.sqlserver/plugin.xml
@@ -14,7 +14,7 @@
       <connectionFactory
             class="org.eclipse.datatools.enablement.msft.internal.sqlserver.connection.JDBCSQLServerConnectionFactory"
             id="java.sql.Connection"
-            name="jdbc.connection.name"
+            name="%jdbc.connection.name"
             profile="org.eclipse.datatools.enablement.msft.sqlserver.connectionProfile"/>
    </extension>
    
