[204620]  Need a method of contributing driver definition specific UIs to a connection profile wizard

--- a/plugins/org.eclipse.datatools.enablement.mysql/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.mysql/build.properties
@@ -12,7 +12,8 @@ bin.includes = plugin.xml,\
                .,\
                plugin.properties,\
                about.html,\
-               META-INF/
+               META-INF/,\
+               icons/
 jars.compile.order = .
 source.. = src/
 plugin.version =	1.0.0.200706071
