--- a/plugins/org.eclipse.datatools.enablement.mysql/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.mysql/plugin.properties
@@ -29,3 +29,6 @@ org.eclipse.datatools.enablement.mysql.4_0.driverTemplate = MySQL JDBC Driver
 org.eclipse.datatools.enablement.mysql.4_1.driverTemplate = MySQL JDBC Driver
 org.eclipse.datatools.enablement.mysql.5_0.driverTemplate = MySQL JDBC Driver
 org.eclipse.datatools.enablement.mysql.5_1.driverTemplate = MySQL JDBC Driver
+
+jdbc.connection.name = JDBC Connection
+profile.mysql.title = MySQL
