--- a/plugins/org.eclipse.datatools.enablement.mysql.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.mysql.ui/build.properties
@@ -7,14 +7,17 @@
 # 
 # Contributors:
 #     Versant Corporation - initial API and implementation
+#     IBM Corporation - migrated to new wizard framework
 ###############################################################################
-bin.includes = plugin.xml,\
-               .,\
-               plugin.properties,\
-               about.html,\
-               META-INF/
-jars.compile.order = .
 source.. = src/
+output.. = bin/
+bin.includes = META-INF/,\
+               .,\
+               about.html,\
+               icons/,\
+               plugin.properties,\
+               plugin.xml
+src.dir	= src/
 plugin.version =	1.0.0.200711021
 javadoc.dir =		doc/api/
 download.dir =		./download/
