--- a/plugins/org.eclipse.datatools.enablement.mysql.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.mysql.ui/plugin.properties
@@ -10,3 +10,8 @@
 ###############################################################################
 pluginName=Eclipse Data Tools Platform MySQL UI Plug-in
 providerName=Eclipse.org
+
+profile.mysql.wizard.title = MySQL
+profile.mysql.wizard.description = Create a MySQL connection profile.
+profile.mysql.properties = Driver Properties
+
