[210454] Added an extension point and associated support classes to the org.eclipse.datatools.sqltools.result plugin to allow clients to customizing retrieving and displaying data from a result set.

--- a/plugins/org.eclipse.datatools.sqltools.result/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.result/plugin.xml
@@ -3,6 +3,7 @@
 <plugin>
    <extension-point id="reExecuteScript" name="Re-execute History Result Entry" schema="schema/reExecuteScript.exsd"/>
    <extension-point id="resultSetOutputter" name="resultSetOutputter" schema="schema/resultSetOutputter.exsd"/>
+   <extension-point id="resultSetViewer" name="Additional Viewers for ResultSets" schema="schema/resultSetViewer.exsd"/>
    <extension
          point="org.eclipse.ui.views">
       <view
@@ -28,6 +29,11 @@
             class="org.eclipse.datatools.sqltools.result.internal.preference.ResultHistoryPage"
             id="org.eclipse.datatools.sqltools.result.resultHistory"
             name="%SQLResultsView.history.page"
+            category="org.eclipse.datatools.sqltools.result.displayOption"/>
+      <page
+            class="org.eclipse.datatools.sqltools.result.internal.preference.ResultSetViewerPreferencePage"
+            id="org.eclipse.datatools.sqltools.result.resultSetViewerPreference"
+            name="%SQLResultsView.resultsetviewer.page"
             category="org.eclipse.datatools.sqltools.result.displayOption"/>
    </extension>
    <extension
