CheckIn: Fix Bugzilla bug 132950 Support multi nodes can be inserted into the column mapping in one time
Fix Bugzilla bug 182027 BIRT Designer  - Enhancements to XML dataset editor UI

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
@@ -17,8 +17,8 @@ oda.data.source.id=org.eclipse.datatools.enablement.oda.xml
 # NLS Strings
 #
 oda.xml.datasource=XML Data Source
-oda.xml.dataset=XML Data Set
-oda.xml.tablemapping=Table Mapping
+oda.xml.dataset=Sample XML Settings
+oda.xml.tablemapping=Row Mapping
 oda.xml.columnmapping=Column Mapping
 #
 plugin.name=Eclipse Data Tools Platform XML ODA Designer
